# esostats

./: .gitignore  Cargo.toml  index.html
.github/workflows/: deploy.yml
data/: set_data.csv  set_ids.csv  skills.json  streamlined.ipynb
src/: data.rs  graph.rs  main.rs  pie.rs  players.rs  sets.rs  skills.rs  styles.css
