[package]
name = "parselist"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = {version="2.0.1", features = ["serde"] }
charming = { version="0.6.0", features = ["wasm"] }
serde = { version="1.0.228", features = ["derive"] }
serde_json = "1.0.145"
yew = "0.21.0"
yew-hooks = "0.3.4"
yew_icons = {version = "0.8", features = ["BootstrapDiscord", "BootstrapGithub"]}
