[package]
name = "parselist"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcode = { version = "0.6.7", features = ["serde"] }
charming = { version="0.6.0", features = ["wasm"] }
regex = "1.12.2"
serde = { version="1.0.228", features = ["derive"] }
serde_json = "1.0.145"
web-sys = "0.3.83"
yew = "0.21.0"
yew-hooks = "0.3.4"
yew_icons = {version = "0.8", features = ["BootstrapDiscord", "BootstrapGithub"]}
